java8 compatibility changes