@@ -10,7 +10,7 @@ public class AllPositiveNumber {
         List<Integer> numbers = Arrays.asList(3, 6, 9, 12, 15, 18);
 
         List<Integer> postiveList = numbers.stream().filter(n -> n > 0)
-                .toList();
+                .collect(Collectors.toList());
 
         System.out.println(postiveList);
 
@@ -21,7 +21,7 @@ public class AllPositiveNumber {
 
         List<Integer> numbers1 = Arrays.asList(3, -6, 9, 12, 15, 18);
         List<Integer> postiveList1 = numbers1.stream().filter(n -> n > 0)
-                .toList();
+                .collect(Collectors.toList());
 
         System.out.println(postiveList1); //[3, 9, 12, 15, 18] list
 
