@@ -3,6 +3,7 @@ package com.java.version.eight.streams.level.easy;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class FirstNonEmptyString {
     public static void main(String[] args) {
@@ -11,7 +12,7 @@ public class FirstNonEmptyString {
 
         List<String> list = strings.stream()
                 .filter(s -> !s.isEmpty())
-                .toList();
+                .collect(Collectors.toList());
         System.out.println(list); //[Hello, World]
 
         Optional<String> firstNonemptyString = strings.stream()
