@@ -3,6 +3,7 @@ package com.java.version.eight.streams.level.hard;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -23,20 +24,20 @@ public class SlidingWindowAverage {
 
         List<Double> avgList = IntStream.range(0, list.size() - 2)
                 .mapToObj(i -> ((list.get(i) + list.get(i + 1) + list.get(i + 2)) / 3.0)
-                ).toList();
+                ).collect(Collectors.toList());
         System.out.println(avgList); //[9.0, 13.0, 18.0, 27.0]
 
         //Generic
         int window = 3;
         List<Integer> avgList1 = IntStream.range(0, list.size() - (window-1))
                 .mapToObj(i -> ((list.get(i) + list.get(i + 1) + list.get(i + 2)) / window)
-                ).toList();
+                ).collect(Collectors.toList());
         System.out.println(avgList1); //[9, 13, 18, 27]
 
         int window1 = 4;
         List<Integer> avgList2 = IntStream.range(0, (int) (list.size() - (window1-1)))
                 .mapToObj(i -> ((list.get(i) + list.get(i + 1) + list.get(i + 2)+list.get(i + 3)) / window1)
-                ).toList();
+                ).collect(Collectors.toList());
         System.out.println(avgList2); //[10, 15, 24] for int window1
         //for double window1 [10.75, 15.5, 24.0]
         //still not generic for //(list.get(i) + list.get(i + 1) + list.get(i + 2)+list.get(i + 3))
@@ -47,7 +48,7 @@ public class SlidingWindowAverage {
             int window2= j;
             List<List<Integer>> slidingSubList = IntStream.range(0, (int) (list.size() - (window2 - 1)))
                     .mapToObj(i -> list.subList(i, i + window2))
-                    .toList();
+                    .collect(Collectors.toList());
             System.out.printf("subListSize = "+window2+" SubList :"+ slidingSubList);
             List<Double> slidingSubListAvg = IntStream.range(0, list.size() - (window2 - 1))
                     .mapToObj(i -> list.subList(i, i + window2))
@@ -55,7 +56,7 @@ public class SlidingWindowAverage {
                             .mapToInt(Integer::intValue)
                             .average()
                             .orElse(0.0))
-                    .toList();
+                    .collect(Collectors.toList());
             System.out.print(" O/P : "+slidingSubListAvg);
             System.out.println();
         }
