@@ -5,6 +5,7 @@ import com.java.version.eight.streams.level.intermediate.dto.Employee;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class SortEmployeesBySalary {
     public static void main(String[] args) {
@@ -17,12 +18,12 @@ public class SortEmployeesBySalary {
         );
 
         List<Employee> listAscending = employees.stream().sorted(Comparator.comparing(Employee::getSalary))
-                .toList();
+                .collect(Collectors.toList());
 
         System.out.println(listAscending);
 
         List<Employee> listDescending = employees.stream().sorted(Comparator.comparing(Employee::getSalary).reversed())
-                .toList();
+                .collect(Collectors.toList());
 
         System.out.println(listDescending);
 
