@@ -23,14 +23,14 @@ public class Top3FrequentWords {
                 .stream()
                 .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
                 .limit(3)
-                .toList();
+                .collect(Collectors.toList());
         System.out.println(out);//[java=4, is=3, powerful=1] //why powerful only are=1 streams=1 oriented=1, great=1, fun=1, object=1
 
         //alternate way
         List<Map.Entry<String, Long>> sorted = map.entrySet()
                 .stream()
                 .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
-                .toList();
+                .collect(Collectors.toList());
         System.out.println(sorted);
         //[java=4, is=3, powerful=1, are=1, and=1, streams=1, oriented=1, great=1, fun=1, object=1]
 
@@ -38,12 +38,12 @@ public class Top3FrequentWords {
                 .map(Map.Entry::getValue)
                 .distinct()
                 .limit(3)
-                .toList();
+                .collect(Collectors.toList());
         System.out.println(top3Frequencies); //[4, 3, 1]
 
         List<Map.Entry<String, Long>> top3Words = sorted.stream()
                 .filter(e -> top3Frequencies.contains(e.getValue()))
-                .toList();
+                .collect(Collectors.toList());
         System.out.println(top3Words);
         //[java=4, is=3, powerful=1, are=1, and=1, streams=1, oriented=1, great=1, fun=1, object=1]
     }
